# SDD-Test

./: .clang-format  CMakeLists.txt
.github/: README.md  SPECKIT-DESIGN.md  SPECKIT-MAINTENANCE-CHECKLIST.md  SPECKIT-QUICKSTART.md  SPECKIT-WORKFLOW.md  copilot-instructions.md
.github/agents/: copilot-tuner.agent.md  cpp-refactor.agent.md  cpp-refactor.arch.agent.md  cpp-refactor.system.agent.md  master.agent.md  researcher.agent.md  speckit.analyze.agent.md  speckit.checklist.agent.md  speckit.clarify.agent.md  speckit.constitution.agent.md  speckit.implement.agent.md  speckit.plan.agent.md  speckit.research.agent.md  speckit.review.agent.md  speckit.specify.agent.md  speckit.tasks.agent.md  speckit.taskstoissues.agent.md
.github/prompts/: plan-aiAutoTestQt.prompt.md  speckit.analyze.prompt.md  speckit.checklist.prompt.md  speckit.clarify.prompt.md  speckit.constitution.prompt.md  speckit.implement.prompt.md  speckit.plan.prompt.md  speckit.research.prompt.md  speckit.review.prompt.md  speckit.specify.prompt.md  speckit.tasks.prompt.md  speckit.taskstoissues.prompt.md
.github/skills/: skills-readme.md
.github/skills/architect/: SKILL.md
.github/skills/auto-qa/: SKILL.md
.github/skills/auto-qa/assets/: chaos.py  monitor.py
.github/skills/automation/: SKILL.md
.github/skills/automation/scripts/: check_ocr_models.py  convert_md_to_pdf.py  html_to_pdf.py
.github/skills/automation/scripts/md_to_pdf/: README.md  convert.js  package.json  test_case.md
.github/skills/brainstorming/: SKILL_CH.md
.github/skills/bug-expert/: SKILL.md
.github/skills/cmake-expert/: SKILL.md
.github/skills/code-refactor/: SKILL.md
.github/skills/coder/: SKILL.md
.github/skills/cpp-api-doc-normalizer/: SKILL.md
.github/skills/cpp-build-cmake/: SKILL.md
.github/skills/cpp-coding-standards/: SKILL_CH.md
.github/skills/cpp-comment-optimizer/: SKILL.md
.github/skills/cpp-concurrency/: SKILL.md
.github/skills/cpp-legacy-comment-cleaner/: SKILL.md
.github/skills/cpp-memory-safety/: SKILL.md
.github/skills/cpp-static-analysis/: SKILL.md
.github/skills/cpp-templates-metaprogramming/: SKILL_CN.md
.github/skills/cpp-test-gtest/: SKILL.md
.github/skills/cpp-testing/: SKILL_CH.md
.github/skills/doc-writer/: SKILL.md
.github/skills/docx/: SKILL.md  SKILL.zh.md
.github/skills/find-skills/: SKILL.md
.github/skills/pdf/: SKILL.zh.md
.github/skills/pptx/: SKILL.zh.md
.github/skills/requirement-refiner/: SKILL.md
.github/skills/researcher/: SKILL.md
.github/skills/reviewer/: SKILL.md
.github/skills/tester/: SKILL.md
.github/skills/xlsx/: SKILL.zh.md
.specify/memory/: constitution.md
.specify/scripts/cmake/: check-cmake-build.ps1  generate-compile-commands.ps1  run-clang-tidy.ps1  run-tests-ctest.ps1
.specify/templates/: ignore-patterns.md  plan-template.md  spec-template.md
.specify/work/: 相机新设计方案.md
SDK/05_Huarui/Include/IMV/: IMVApi.h  IMVDefines.h
SDK/05_Huarui/Lib/x64/: MVSDKmd.lib
cmake/: CompilerOptions.cmake  Dependencies.cmake  Sanitizers.cmake
doc/: CHANGELOG.md  DELIVERY_MANIFEST.md  README-camera-config.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  RISK_REGISTER.md  camera-config-3x8.xml  design.md
example/ChunkData/: CMakeLists.txt
example/main/: CMakeLists.txt  config.json  main.cpp
scripts/: generate_layout.py
specs/main/: analyze.md  data-model.md  plan.md  quickstart.md  research.md  review.md  spec.md  tasks.md
specs/main/contracts/: core-api.md
src/common/: CMakeLists.txt
src/common/include/camera/common/: FileUtils.hpp  Log.hpp  StringUtils.hpp
src/common/src/: FileUtils.cpp  Log.cpp  StringUtils.cpp
src/core/: CMakeLists.txt
src/core/include/camera/core/: CameraBase.hpp  CameraConfig.hpp  CameraConfigParser.hpp  CameraFactory.hpp  CameraLayout.hpp  CameraMonitor.hpp  CameraRuntime.hpp  CameraService.hpp  CoreResult.hpp  ICamera.hpp  ICameraGroup.hpp  ICameraService.hpp  MonitorPolicy.hpp  PluginEntry.hpp  PluginLoader.hpp
src/core/src/: CameraBase.cpp  CameraConfigParser.cpp  CameraCoreStub.cpp  CameraFactory.cpp  CameraLayout.cpp  CameraMonitor.cpp  CameraRuntime.cpp  CameraService.cpp  CameraServiceAlgorithms.cpp  CoreResult.cpp  PluginLoader.cpp
src/plugins/huarui/: CMakeLists.txt
src/plugins/huarui/include/camera/plugins/huarui/: HuaruiCamera.hpp  HuaruiSdkAdapter.hpp
src/plugins/huarui/src/: CameraHuaruiStub.cpp  HuaruiCamera.cpp  HuaruiPluginEntry.cpp  HuaruiSdkAdapter.cpp
src/plugins/null/: CMakeLists.txt
src/plugins/null/include/camera/plugins/null/: NullCamera.hpp  NullCameraGroup.hpp
src/plugins/null/src/: CameraNullStub.cpp  NullCamera.cpp  NullCameraGroup.cpp  NullPluginEntry.cpp  NullStreamSimulator.cpp
tests/: CMakeLists.txt
tests/integration/: test_3x8_xml_config.cpp  test_cross_platform_build.cpp  test_huarui_minimal_flow.cpp  test_null_capture_flow.cpp  test_null_reconnect_policy.cpp  test_plugin_loading.cpp
tests/unit/: test_camera_layout.cpp  test_error_semantics.cpp  test_factory_registration.cpp  test_placeholder.cpp  test_service_contracts.cpp
